--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phạm Quang Trung</title>
+    <link rel="icon" type="image/png" href="avatar/avt.png" />
+    <link rel="apple-touch-icon" href="avatar/avt.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -1118,6 +1120,25 @@
                 <i class="fab fa-github"></i>
                 <span>GitHub</span>
               </a>
+            </div>
+          </div>
+        </div>
+
+        <!-- QR Thanh toán - Đặt ở cuối -->
+        <div class="payment-qr">
+          <h3>Banking</h3>
+          <div class="qr-container">
+            <img
+              src="avatar/qr-payment.png"
+              alt="QR Thanh toán TPBank"
+              class="qr-image"
+            />
+            <div class="qr-info">
+              <h4>PHẠM QUANG TRUNG</h4>
+              <p>STK: 45404052004</p>
+              <p>Nickname: trungnotchung</p>
+              <p>TPBank - VietQR</p>
+              <p class="qr-note">Quét mã để thanh toán</p>
             </div>
           </div>
         </div>
