--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Phạm Quang Trung</title>
@@ -1140,7 +1143,7 @@
               <h4>PHẠM QUANG TRUNG</h4>
               <p>STK: 45404052004</p>
               <p>Nickname: trungnotchung</p>
-              <p>TPBank - VietQR</p>
+              <p>TPBank</p>
               <p class="qr-note">Quét mã để thanh toán</p>
             </div>
           </div>
@@ -1153,7 +1156,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="footer-text">
-            <p>&copy; 2025 Phạm Quang Trung. Made with ❤️ and lots of ☕</p>
+            <p>&copy; 2025 Phạm Quang Trung</p>
           </div>
           <div class="footer-scroll">
             <button class="scroll-top" id="scrollTop">
