--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
         </h3>
         <p class="bank-modal-subtitle">
           Chạm vào ứng dụng bạn dùng để được điều hướng sang app ngân hàng và
-          quét VietQR.
+          quét Mã QR.
         </p>
         <div class="bank-search">
           <i class="fas fa-search"></i>
