--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
               <p>STK: 45404052004</p>
               <p>Nickname: trungnotchung</p>
               <p>TPBank</p>
-              <p class="qr-note">Quét mã để thanh toán</p>
+              <p class="qr-note">Quét mã hoặc nhấp vào QR để thanh toán</p>
             </div>
           </div>
         </div>
@@ -1189,8 +1189,8 @@
         <div class="bank-status" id="bankStatus"></div>
         <div class="bank-list" id="bankList" role="list"></div>
         <p class="bank-modal-note">
-          Nếu app không mở, hãy chắc chắn bạn đang sử dụng điện thoại và đã cài
-          sẵn ứng dụng ngân hàng tương ứng.
+          <strong>Lưu ý:</strong> Nếu bạn chưa cài app ngân hàng, hệ thống sẽ
+          tự động chuyển bạn đến App Store/CH Play để tải app.
         </p>
       </div>
     </div>
