--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li><a href="#gallery">Kỷ niệm</a></li>
           <li><a href="#skills">Kỹ năng</a></li>
           <li><a href="#contact">Liên hệ</a></li>
+          <li><a href="#banking">Banking</a></li>
         </ul>
         <div class="mobile-menu" id="mobile-menu">
           <span></span>
@@ -96,9 +97,9 @@
           <div class="about-text slide-in-right">
             <h3>Xin chào! Tôi là Trung</h3>
             <p>
-              Tôi là sinh viên tại Đại học Công nghệ TP.HCM (HUTECH), đang theo
-              học chuyên ngành Công nghệ Thông tin. Với niềm đam mê công nghệ và
-              sự sáng tạo, tôi luôn tìm kiếm những cơ hội để học hỏi và phát
+              Tôi là sinh viên tại Đại học Công nghệ TP.HCM - HUTECH, đang theo
+              học chuyên ngành Công nghệ Thông tin, chuyên ngành công nghệ phần mềm. 
+              Với niềm đam mê công nghệ và sự sáng tạo, tôi luôn tìm kiếm những cơ hội để học hỏi và phát
               triển kỹ năng.
             </p>
             <p>
@@ -963,7 +964,7 @@
                 <div class="skill-info">
                   <h4>Chơi game</h4>
                   <div class="skill-progress">
-                    <div class="progress-bar" data-percent="88"></div>
+                    <div class="progress-bar" data-percent="78"></div>
                   </div>
                 </div>
               </div>
@@ -975,7 +976,7 @@
                 <div class="skill-info">
                   <h4>Coding</h4>
                   <div class="skill-progress">
-                    <div class="progress-bar" data-percent="1"></div>
+                    <div class="progress-bar" data-percent="19"></div>
                   </div>
                 </div>
               </div>
@@ -987,7 +988,7 @@
                 <div class="skill-info">
                   <h4>Lười</h4>
                   <div class="skill-progress">
-                    <div class="progress-bar" data-percent="36"></div>
+                    <div class="progress-bar" data-percent="63"></div>
                   </div>
                 </div>
               </div>
@@ -999,7 +1000,7 @@
                 <div class="skill-info">
                   <h4>Thích đi chơi</h4>
                   <div class="skill-progress">
-                    <div class="progress-bar" data-percent="100"></div>
+                    <div class="progress-bar" data-percent="79"></div>
                   </div>
                 </div>
               </div>
@@ -1074,7 +1075,7 @@
               </div>
               <div class="contact-details">
                 <h4>Tính cách</h4>
-                <p>Thân thiện, hòa đồng</p>
+                <p>Vui vẻ, thân thiện, hòa đồng</p>
                 <p>Luôn sẵn sàng học hỏi</p>
               </div>
             </div>
@@ -1111,12 +1112,21 @@
                 <span>Facebook</span>
               </a>
               <a
-                href="mailto:phamquangtrung4504@gmail.com"
+                href="https://mail.google.com/mail/?view=cm&fs=1&to=phamquangtrung4504@gmail.com"
+                target="_blank"
                 class="social-btn email"
-                title="Gửi email cho tôi: phamquangtrung4504@gmail.com"
+                title="Chat với tôi qua Gmail: phamquangtrung4504@gmail.com"
               >
                 <i class="fas fa-envelope"></i>
-                <span>Email</span>
+                <span>Gmail</span>
+              </a>
+              <a
+                href="https://www.tiktok.com/@trungdicodedao"
+                target="_blank"
+                class="social-btn tiktok"
+              >
+                <i class="fab fa-tiktok"></i>
+                <span>TikTok</span>
               </a>
               <a
                 href="https://github.com"
@@ -1131,7 +1141,7 @@
         </div>
 
         <!-- QR Thanh toán - Đặt ở cuối -->
-        <div class="payment-qr">
+        <div class="payment-qr" id="banking">
           <h3>Banking</h3>
           <div
             class="qr-container"
