--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <h3>Xin chào! Tôi là Trung</h3>
             <p>
               Tôi là sinh viên tại Đại học Công nghệ TP.HCM - HUTECH, đang theo
-              học chuyên ngành Công nghệ Thông tin, chuyên ngành công nghệ phần mềm. 
-              Với niềm đam mê công nghệ và sự sáng tạo, tôi luôn tìm kiếm những cơ hội để học hỏi và phát
-              triển kỹ năng.
+              học chuyên ngành Công nghệ Thông tin, chuyên ngành công nghệ phần
+              mềm. Với niềm đam mê công nghệ và sự sáng tạo, tôi luôn tìm kiếm
+              những cơ hội để học hỏi và phát triển kỹ năng.
             </p>
             <p>
               Ngoài việc học, tôi còn thích khám phá những địa điểm mới, chụp
@@ -1199,8 +1199,8 @@
         <div class="bank-status" id="bankStatus"></div>
         <div class="bank-list" id="bankList" role="list"></div>
         <p class="bank-modal-note">
-          <strong>Lưu ý:</strong> Nếu bạn chưa cài app ngân hàng, hệ thống sẽ
-          tự động chuyển bạn đến App Store/CH Play để tải app.
+          <strong>Lưu ý:</strong> Nếu bạn chưa cài app ngân hàng, hệ thống sẽ tự
+          động chuyển bạn đến App Store/CH Play để tải app.
         </p>
       </div>
     </div>
