--- a/index.html
+++ b/index.html
@@ -1096,14 +1096,6 @@
             <h3>Kết nối với tôi</h3>
             <div class="social-buttons">
               <a
-                href="https://zalo.me/0326658276"
-                target="_blank"
-                class="social-btn zalo"
-              >
-                <i class="fas fa-phone"></i>
-                <span>Zalo</span>
-              </a>
-              <a
                 href="https://www.facebook.com/share/1a38Y15xhZ/?mibextid=wwXIfr"
                 target="_blank"
                 class="social-btn facebook"
@@ -1111,6 +1103,16 @@
                 <i class="fab fa-facebook-f"></i>
                 <span>Facebook</span>
               </a>
+
+              <a
+                href="https://zalo.me/0326658276"
+                target="_blank"
+                class="social-btn zalo"
+              >
+                <i class="fas fa-phone"></i>
+                <span>Zalo</span>
+              </a>
+
               <a
                 href="https://mail.google.com/mail/?view=cm&fs=1&to=phamquangtrung4504@gmail.com"
                 target="_blank"
@@ -1128,14 +1130,15 @@
                 <i class="fab fa-tiktok"></i>
                 <span>TikTok</span>
               </a>
-              <a
+              <!-- Tạm thời không share github -->
+              <!-- <a
                 href="https://github.com"
                 target="_blank"
                 class="social-btn github"
               >
                 <i class="fab fa-github"></i>
                 <span>GitHub</span>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
