--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           </a>
         </div>
       </div>
-      <div class="scroll-indicator">
+      <a href="#about" class="scroll-indicator">
         <i class="fas fa-chevron-down"></i>
-      </div>
+      </a>
     </section>
 
     <!-- About Section -->
